--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgb(19 23 33);
+}
+
 .App {
   text-align: center;
 }
